--- a/project3_report.html
+++ b/project3_report.html
@@ -1,198 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Project 2 Report</title>
-    <style>
-      :root {
-        --color-neutral-95: hsl(220 10% 95%);
-        --color-neutral-90: hsl(220 10% 90%);
-        --color-neutral-80: hsl(220 10% 80%);
-        --color-neutral-70: hsl(220 10% 70%);
-        --color-neutral-60: hsl(220 10% 60%);
-        --color-neutral-50: hsl(220 10% 50%);
-        --color-neutral-40: hsl(220 10% 40%);
-        --color-neutral-30: hsl(220 10% 30%);
-        --color-neutral-20: hsl(220 10% 20%);
-        --color-neutral-10: hsl(220 10% 10%);
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mice in Rhythm: Interactive Visualization</title>
+  <style>
+    :root {
+      --bg-color: #fefaf6;
+      --card-bg: #ffffff;
+      --accent: #0077aa;
+      --header-color: #2d2d2d;
+      --text-color: #333;
+      --border-color: #ddd;
+    }
+
+    body {
+      font-family: "Segoe UI", system-ui, sans-serif;
+      background: var(--bg-color);
+      color: var(--text-color);
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 2rem 1.5rem;
+      line-height: 1.7;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.2rem;
+      color: var(--header-color);
+    }
+
+    h2 {
+      font-size: 1.4rem;
+      margin-top: 2.5rem;
+      margin-bottom: 0.75rem;
+      border-bottom: 2px solid var(--border-color);
+      padding-bottom: 0.3rem;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.3rem;
+      color: var(--accent);
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .team-info {
+      font-size: 0.95rem;
+      margin-top: 0.8rem;
+      color: #555;
+    }
+
+    section {
+      background: var(--card-bg);
+      padding: 1.5rem;
+      border-radius: 0.75rem;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.06);
+      margin-bottom: 1.5rem;
+      border: 1px solid var(--border-color);
+    }
+
+    .visualization {
+      background: #f8fcff;
+      border-left: 6px solid var(--accent);
+    }
+
+    #chart-container {
+      margin-top: 1rem;
+      min-height: 300px;
+      background: #fafafa;
+      border: 1px dashed #ccc;
+      border-radius: 0.5rem;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    figcaption {
+      font-size: 0.85rem;
+      color: #666;
+      margin-top: 0.3rem;
+    }
+
+    footer {
+      margin-top: 4rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+      border-top: 1px solid #ddd;
+      padding-top: 1.5rem;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
       }
+    }
+  </style>
+</head>
 
-      html {
-        font: 100%/1.5 system-ui;
-        counter-reset: figure;
-        background: var(--color-neutral-95);
-        max-width: min(75vw, 80em);
-        margin: 0 auto;
-      }
+<body>
+  <header>
+    <h1>Mice in Rhythm</h1>
+    <h3>How do circadian rhythms and estrus cycles differently influence activity and temperature patterns in male and female mice?</h3>
+    <div class="team-info">
+      <strong>Team Name: 404 Found</strong><br>
+      <strong>Team Members:</strong> Wenxi Li, Yixuan Xin, Juntong Ye, Sirui Zhang<br>
+      <strong>UCSD Emails:</strong> wel055@ucsd.edu, yixin@ucsd.edu, juy037@ucsd.edu, siz012@ucsd.edu
+    </div>
+  </header>
 
-      /* Headings */
+  <main>
+    <section class="visualization" id="interactive-viz">
+      <h2>Interactive Visualization</h2>
+      <p>[Brief description of how to interact with the visualization]</p>
+      <div id="chart-container">
+        <!-- D3.js visualizations will be rendered here -->
+        [Interactive chart will appear here]
+      </div>
+    </section>
 
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        line-height: 1.1;
-        font-weight: 600;
-        text-wrap: balance;
-      }
+    <section>
+      <h2>Design Rationale</h2>
+      <p>[Write about your design choices: visual encodings, interactivity, color choices, layout, etc.]</p>
+      <p>[Discuss what alternatives were considered and why the final design was chosen]</p>
+    </section>
 
-      h1,
-      h2 {
-        border-bottom: 1px solid var(--color-neutral-80);
-        padding-bottom: 0.2em;
-      }
+    <section>
+      <h2>Development Process</h2>
+      <p>[Describe how your team developed the visualization, including tool choices, data prep, and iterations]</p>
+      <p>
+        <strong>Team Roles:</strong><br>
+        [List which team member did what. Example: A built filters, B handled data cleaning, etc.]
+      </p>
+      <p>[Roughly how many total people-hours did the project take?]</p>
+    </section>
 
-      h1 {
-        margin-block: 1em 0.5rem;
-        font-size: clamp(2.5em, 150% + 2vh + 2vw, 10vmin);
-        font-weight: 800;
+    <section>
+      <h2>Reflection</h2>
+      <p>[What did your team learn from this project? What was most difficult or surprising?]</p>
+      <p>[How might this visualization be expanded or improved in the future?]</p>
+    </section>
 
-        small {
-          display: block;
-          width: fit-content;
-          padding: 0.2em 0.5em;
-          margin-inline: auto;
-          color: white;
-          background: var(--color-neutral-40);
-          font-size: 40%;
-          text-transform: uppercase;
-          white-space: nowrap;
-        }
-      }
+    <footer>
+      <p>© Spring 2025 | DSC 106 - UC San Diego | Team Mice in Rhythm</p>
+    </footer>
+  </main>
 
-      h2 {
-        font-size: 180%;
-        color: var(--color-neutral-30);
-      }
-
-      h3 {
-        font-size: 130%;
-      }
-
-      /* Lists */
-
-      ul,
-      ol {
-        padding-inline-start: 2em;
-      }
-
-      li {
-        &::marker {
-          color: var(--color-neutral-40);
-        }
-
-        + li {
-          margin-top: 0.2em;
-        }
-      }
-
-      /* Sectioning elements */
-
-      header {
-        padding-block: 1em;
-        text-align: center;
-      }
-
-      main {
-        background: white;
-        color: var(--color-neutral-20);
-        border-radius: 1rem;
-        padding: 0.1rem 2rem;
-      }
-
-      /* Figures */
-
-      figure {
-        margin: 1em 0;
-        padding: 0.5rem;
-        margin-inline: -0.5em;
-        border: 1px solid var(--color-neutral-80);
-        box-shadow: 0 0.1em 0.2em var(--color-neutral-95);
-        text-align: center;
-        background: white;
-
-        > figcaption {
-          font: 500 75% var(--font-sans);
-          background: var(--color-neutral-95);
-          padding: 0.5rem;
-          margin: -0.5rem;
-          margin-top: 0.5rem;
-          counter-increment: figure;
-          text-align: left;
-
-          &::before {
-            content: 'Figure ' counter(figure) ': ';
-            font-weight: bold;
-            color: var(--color-neutral-40);
-          }
-
-          a:not(:hover, :focus, :active) {
-            color: inherit;
-            text-decoration: underline;
-            text-decoration-color: color-mix(
-              in lab,
-              currentColor,
-              transparent 70%
-            );
-          }
-        }
-      }
-    </style>
-  </head>
-
-  <body>
-    <header>
-      <h1>
-        <small>Assignment 4</small>
-        Persuasive or Deceptive Visualization?
-      </h1>
-
-      <p><strong>Your Name</strong> — <em>Your UCSD Email Address</em></p>
-    </header>
-
-    <main>
-      <h2>Proposition: [STATE PROPOSITION]</h2>
-
-      <section>
-        <h3>FOR the Proposition</h3>
-
-        <figure>
-          <img src="IMAGE_FILENAME" alt="" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
-        </figure>
-
-        <p>Design Decisions and Rationale:</p>
-
-        <ul>
-          <li>RATIONALE_1</li>
-          <li>RATIONALE_2</li>
-          <li>RATIONALE_3</li>
-        </ul>
-      </section>
-
-      <section>
-        <h3>AGAINST the Proposition</h3>
-
-        <figure>
-          <img src="IMAGE_FILENAME" alt="" />
-          <figcaption>BRIEF CAPTION HERE.</figcaption>
-        </figure>
-
-        <p>Design Decisions and Rationale:</p>
-
-        <ul>
-          <li>RATIONALE_1</li>
-          <li>RATIONALE_2</li>
-          <li>RATIONALE_3</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Final Reflection</h2>
-
-        <p>[WRITE FINAL REFLECTION PARAGRAPHS HERE.]</p>
-      </section>
-    </main>
-  </body>
+  <!-- Load D3 -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Load your custom script -->
+  <script src="main.js"></script>
+</body>
 </html>
