--- a/project3_report.html
+++ b/project3_report.html
@@ -100,6 +100,20 @@
       }
     }
   </style>
+  <style>
+    body{font-family:system-ui,sans-serif;margin:24px;background:#fafafa}
+    h2{margin:4px 0;font-size:18px}
+    .panel{margin-bottom:56px}
+    .controls{margin-bottom:6px}
+    .btn{padding:4px 10px;border:1px solid #6c8ab5;border-radius:4px;background:#fff;margin-right:4px;cursor:pointer}
+    .btn.active{background:#dbe8ff;font-weight:600}
+    svg{border:1px solid #ddd;background:#fff}
+    .axis path,.axis line{stroke:#888}
+    .tooltip{position:fixed;pointer-events:none;background:#333;color:#fff;padding:4px 6px;border-radius:3px;font-size:12px;opacity:.9}
+    dialog{border:none;border-radius:6px;box-shadow:0 4px 10px rgba(0,0,0,.25);padding:14px}
+    dialog::backdrop{background:rgba(0,0,0,.35)}
+    #scatter-close{float:right;background:#e33;color:#fff;border:none;border-radius:3px;padding:2px 6px;cursor:pointer}
+  </style>
 </head>
 
 <body>
@@ -118,8 +132,34 @@
       <h2>Interactive Visualization</h2>
       <p>[Brief description of how to interact with the visualization]</p>
       <div id="chart-container">
-        <!-- D3.js visualizations will be rendered here -->
-        [Interactive chart will appear here]
+        <!-- pasted from newvis.html: -->
+        <div class="panel" id="activity-panel">
+          <h2>Mean Activity (Female & Male)</h2>
+          <div class="controls">
+            <button class="btn active" data-mode="light"  data-target="activity">Highlight Light</button>
+            <button class="btn"        data-mode="dark"   data-target="activity">Highlight Dark</button>
+            <button class="btn"        data-mode="estrus" data-target="activity">Highlight Estrus (♀)</button>
+          </div>
+          <svg id="activity" width="960" height="420"></svg>
+        </div>
+        
+        <div class="panel" id="temp-panel">
+          <h2>Mean Core-Body Temperature (Female & Male)</h2>
+          <div class="controls">
+            <button class="btn active" data-mode="light"  data-target="temp">Highlight Light</button>
+            <button class="btn"        data-mode="dark"   data-target="temp">Highlight Dark</button>
+            <button class="btn"        data-mode="estrus" data-target="temp">Highlight Estrus (♀)</button>
+          </div>
+          <svg id="temp" width="960" height="420"></svg>
+        </div>
+        <div id="tooltip" class="tooltip" style="display:none"></div>
+        <dialog id="scatterDlg">
+          <button id="scatter-close">✕</button>
+          <h3 id="scatter-title" style="margin:4px 0 8px">
+            Temperature vs Activity (12-h window)
+          </h3>
+          <svg width="420" height="420"></svg>
+        </dialog>
       </div>
     </section>
 
