fix for highlight and zoom-in bug

--- a/project3_report.html
+++ b/project3_report.html
@@ -94,6 +94,10 @@
       padding-top: 1.5rem;
     }
 
+    .btn:hover{ background:#e6f0ff }
+    .btn.active{ background:#bfdcff }
+
+
     @media (max-width: 600px) {
       body {
         padding: 1rem;
