--- a/project3_report.html
+++ b/project3_report.html
@@ -101,8 +101,10 @@
       font-size: 0.85rem;
       color: #666;
       margin-top: 4px;
-      text-align: right;
+      text-align: center;
     }
+
+
 
 
 
@@ -153,7 +155,7 @@
             <button class="btn"        data-mode="estrus" data-target="activity">Highlight Estrus (♀)</button>
           </div>
           <p class="scatter-hint">
-            <em>Hold Ctrl (Windows/Linux) or ⌘ (Mac) and click on the chart to open the scatter plot.</em>
+          <em>Hold Ctrl (Windows/Linux) or ⌘ (Mac) and click on the chart to open the scatter plot.</em>
           </p>
           <svg id="activity" width="960" height="420"></svg>
         </div>
