adding switch bar between min and days

--- a/project3_report.html
+++ b/project3_report.html
@@ -107,6 +107,24 @@
   /* hint */
   .scatter-hint{font-size:.8rem;color:#666;margin:4px 0;text-align:center}
 
+  .scale-controls {
+    margin-bottom: 12px;
+    text-align: left;
+  }
+  .scale-controls .btn {
+    padding: 4px 12px;
+    margin: 4px;
+    border: 1px solid #6c8ab5;
+    border-radius: 4px;
+    background: #fff;
+    cursor: pointer;
+  }
+  .scale-controls .btn.active {
+    background: #dbe8ff;
+    font-weight: 600;
+  }
+
+
   dialog{border:none;border-radius:10px;padding:20px;max-width:440px}
   dialog::backdrop{background:rgba(0,0,0,.35)}
   #scatter-close{float:right;background:#e33;color:#fff;border:none;border-radius:3px;padding:2px 6px;cursor:pointer}
@@ -129,8 +147,8 @@
   }
 
   .rationale ul{
-    list-style-type:disc;      /* 普通圆点 */
-    margin:0 0 0 1.2rem;       /* 左缩进 */
+    list-style-type:disc;     
+    margin:0 0 0 1.2rem;     
     padding:0;
   }
 
@@ -218,6 +236,11 @@
             <button class="btn"        data-mode="dark"   data-target="activity">Highlight Dark</button>
             <button class="btn"        data-mode="estrus" data-target="activity">Highlight Estrus (♀)</button>
           </div>
+
+          <div class="scale-controls" data-target="activity">
+            <button class="btn active" data-scale="minutes">Minutes</button>
+            <button class="btn" data-scale="days">Days</button>
+        </div>         
    
           <svg id="activity" width="960" height="420"></svg>
         </div>
@@ -229,8 +252,13 @@
             <button class="btn"        data-mode="dark"   data-target="temp">Highlight Dark</button>
             <button class="btn"        data-mode="estrus" data-target="temp">Highlight Estrus (♀)</button>
           </div>
+          <div class="scale-controls" data-target="temp">
+            <button class="btn active" data-scale="minutes">Minutes</button>
+            <button class="btn" data-scale="days">Days</button>
+          </div>
           <svg id="temp" width="960" height="420"></svg>
         </div>
+        
         <div id="tooltip" class="tooltip" style="display:none"></div>
         <dialog id="scatterDlg">
           <button id="scatter-close">✕</button>
