--- a/project3_report.html
+++ b/project3_report.html
@@ -343,15 +343,16 @@
       <li><b>Wenxi Li</b> — </li>
       <li><b>Yixuan Xin</b> — </li>
       <li><b>Juntong Ye</b> — </li>
-      <li><b>Sirui Zhang</b> —</li>
+      <li><b>Sirui Zhang</b> — <b>Coming out with project topic, initial draft details and final refkection pages/b></li>
     </ul>
 
     </section>
 
     <section>
       <h2>Reflection</h2>
-      <p>[What did your team learn from this project? What was most difficult or surprising?]</p>
-      <p>[How might this visualization be expanded or improved in the future?]</p>
+      <p>Through our project Mice in Rhythm, our team explored how circadian rhythms and estrus cycles differently affect the activity and core-body temperature of male and female mice. One of the most valuable things we learned was the power of interactive visualization to uncover and communicate complex behavioral patterns in time-series data. By aligning our plots with controlled light/dark cycles and marking estrus phases, we were able to highlight sex-specific physiological rhythms. It was both surprising and rewarding to see clear, periodic changes in female activity and temperature that coincided with estrus cycles—an effect largely absent in males.</p>
+      <p>The most difficult part of this project was processing and averaging dense minute-level data across individuals in a meaningful and performant way. Implementing features like highlighting cycles and linking plots required careful data structuring and scale coordination. We were also surprised at how much difference even subtle changes in visualization design (like tooltips, light/dark overlays, and interactivity) made for interpretability.</p>
+      <p>In the future, this visualization could be expanded with filters to view individual mice, options to overlay hormonal data (if available), or include scatterplot comparisons of temperature vs. activity across cycles. Another promising direction is annotating behavioral phases or automatically detecting estrus from temperature spikes. Overall, this project deepened our understanding of biological rhythms and the power of data visualization to tell nuanced physiological stories.      </p>
     </section>
 
     <footer>
