--- a/project3_report.html
+++ b/project3_report.html
@@ -343,7 +343,7 @@
       <li><b>Wenxi Li</b> — </li>
       <li><b>Yixuan Xin</b> — </li>
       <li><b>Juntong Ye</b> — </li>
-      <li><b>Sirui Zhang</b> — <b>Coming out with project topic, initial draft details and final refkection pages/b></li>
+      <li><b>Sirui Zhang</b> — <b>Coming out with project topic, initial draft details and final reflection pages </b></li>
     </ul>
 
     </section>
