--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
         (1) independent small‑multiple panels for each sex and metric<br>
         (2) full‑width heat maps that encode time on the x‑axis and day on the y‑axis<br>
         (3) stacked area charts to show cumulative activity.<br>
+        (4) we tried to change the time interval but it has accomadation issue with other part and also make the data messy, so instead we choose to only put buttons on.
         <br>
         Small multiples made direct comparison tedious, heat maps obscured minute‑level peaks, and stacked areas exaggerated between‑sex differences.      Usability tests with checkpoint showed that a single, shared time axis with layered line tracks, augmented by mutually‑exclusive toggle buttons and D3’s brush to enabled zoom—gave the clearest view of circadian patterns while meeting the interactive requirements, so we adopted that layout as our final choice.
       </p >
@@ -344,7 +345,7 @@
       <li><b>Wenxi Li</b> — D3 interaction design and implement feature</li>
       <li><b>Yixuan Xin</b> — Brainstorming idea, debugging code and layout,writing the visualization and design rationale, and video recording.</li>
       <li><b>Juntong Ye</b> — designed CSS styles and HTML Page, implement feature and debugs, write-up</li>
-      <li><b>Sirui Zhang</b> —</li>
+      <li><b>Sirui Zhang</b> —Design of the research question,  initial graph generation and final reflections of the project </li>
          </ul>
     <p>
       The project spanned <strong>2 weeks</strong> and totalled roughly <strong>30 hours</strong>
