change setup comments+revising work role+deleting days/min

--- a/index.html
+++ b/index.html
@@ -234,12 +234,7 @@
             <button class="btn active" data-mode="light"  data-target="activity">Highlight Light</button>
             <button class="btn"        data-mode="dark"   data-target="activity">Highlight Dark</button>
             <button class="btn"        data-mode="estrus" data-target="activity">Highlight Estrus (♀)</button>
-          </div>
-
-          <div class="scale-controls" data-target="activity">
-            <button class="btn active" data-scale="minutes">Minutes</button>
-            <button class="btn" data-scale="days">Days</button>
-        </div>         
+          </div>      
    
           <svg id="activity" width="960" height="420"></svg>
         </div>
@@ -250,10 +245,6 @@
             <button class="btn active" data-mode="light"  data-target="temp">Highlight Light</button>
             <button class="btn"        data-mode="dark"   data-target="temp">Highlight Dark</button>
             <button class="btn"        data-mode="estrus" data-target="temp">Highlight Estrus (♀)</button>
-          </div>
-          <div class="scale-controls" data-target="temp">
-            <button class="btn active" data-scale="minutes">Minutes</button>
-            <button class="btn" data-scale="days">Days</button>
           </div>
           <svg id="temp" width="960" height="420"></svg>
         </div>
@@ -342,9 +333,9 @@
 
     <h3>Team Roles</h3>
     <ul>
-      <li><b>Wenxi Li</b> — D3 interaction design and implement feature</li>
+      <li><b>Wenxi Li</b> — Implementing the basic visualization in D3 and trying different interactive ideas. Responsible for adding and rendering toggle buttons and tooltip</li>
       <li><b>Yixuan Xin</b> — Brainstorming idea, debugging code and layout,writing the visualization and design rationale, and video recording.</li>
-      <li><b>Juntong Ye</b> — designed CSS styles and HTML Page, implement feature and debugs, write-up</li>
+      <li><b>Juntong Ye</b> — Designed CSS styles and HTML Page, implement feature and debugs, write-up</li>
       <li><b>Sirui Zhang</b> —Design of the research question,  initial graph generation and final reflections of the project </li>
          </ul>
     <p>
